syntax = "proto3";

package ethereum.validator.accounts.v2;

import "eth/v1alpha1/beacon_block.proto";
import "eth/v1alpha1/attestation.proto";

message SignRequest {
    bytes public_key = 1;
    bytes data = 2;
    bytes signature_domain = 3;

    oneof object {
        ethereum.eth.v1alpha1.BeaconBlock block = 4;
        ethereum.eth.v1alpha1.AttestationData attestation_data = 5;
//        ethereum.eth.v1alpha1.VoluntaryExit exit = 6;
    }
}